--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/tauqirkhan/Blog-API#readme",
   "dependencies": {
+    "@prisma/client": "^6.10.1",
     "express": "^5.1.0"
   },
   "devDependencies": {
